--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@ text-align: center;
   </li>
    <li><a href='index.html'>Home</a>
   </li>
-   <li><a href='agenda.html'>Agendamento</a>
+   <li><a href='agendamento.html'>Agendamento</a>
   </li>
-   <li><a href='somos.html'>Quem somos nós?</a>
+   <li><a href='sobre.html'>Quem somos nós?</a>
   </li>
    <li><a href='contato.html'>Contato</a>
   </li> 
@@ -99,7 +99,7 @@ text-align: center;
 </div>
 
 <div id="cssgre"> 
-   <h1>GRE</h1>
+   <h1>GER</h1>
 </div>
 
 <div id="csscar"> 
