--- a/agendamento.html
+++ b/agendamento.html
@@ -112,7 +112,7 @@ top: 170px;
           </li>
            <li><a href='agenda.html'>Agendamento</a>
           </li>
-           <li><a href='somos.html'>Quem somos nós?</a>
+           <li><a href='sobre.html'>Quem somos nós?</a>
           </li>
            <li><a href='contato.html'>Contato</a>
           </li> 
