--- a/contato.html
+++ b/contato.html
@@ -123,7 +123,7 @@ color: #ffffff;
           </li>
            <li><a href='index.html'>Home</a>
           </li>
-           <li><a href='agenda.html'>Agendamento</a>
+           <li><a href='agendamento.html'>Agendamento</a>
           </li>
            <li><a href='sobre.html'>Quem somos nós?</a>
           </li>
