--- a/agendamento.html
+++ b/agendamento.html
@@ -110,7 +110,7 @@ top: 170px;
           </li>
            <li><a href='index.html'>Home</a>
           </li>
-           <li><a href='agenda.html'>Agendamento</a>
+           <li><a href='agendamento.html'>Agendamento</a>
           </li>
            <li><a href='sobre.html'>Quem somos nós?</a>
           </li>
