--- a/CadastroU18.html
+++ b/CadastroU18.html
@@ -178,7 +178,7 @@ color: #FFFFFF;
         </li>
          <li><a href='index.html'>Home</a>
         </li>
-         <li><a href='agenda.html'>Agendamento</a>
+         <li><a href='agendamento.html'>Agendamento</a>
         </li>
          <li><a href='sobre.html'>Quem somos nós?</a>
         </li>
